--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -201,7 +201,7 @@ jobs:
             --volume "${PWD}:/opt/gorse"
           install: |
             apt-get update
-            apt-get install -y wget tar
+            apt-get install -y wget tar unzip
             wget https://go.dev/dl/go1.24.4.linux-riscv64.tar.gz
             tar -C /usr/local -xzf go1.24.4.linux-riscv64.tar.gz
           run: |
