--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -103,7 +103,7 @@ jobs:
 
     - name: Test
 #      run: go test -timeout 30m -v ./... -coverprofile=coverage.txt -covermode=atomic -coverpkg=./...
-      run: go test -timeout 30m -tags='noasm' -v ./...
+      run: go test -timeout 30m -v ./...
       env:
         # MySQL
         MYSQL_URI: mysql://root:password@tcp(localhost:${{ job.services.mysql.ports[3306] }})/
