Add health check

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -75,6 +75,11 @@ jobs:
         env:
           RUSTFS_ACCESS_KEY: rustfsadmin
           RUSTFS_SECRET_KEY: rustfsadmin
+        options: >-
+          --health-cmd="curl -f http://localhost:9000"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
     - name: Set up dataset
