--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -200,20 +200,20 @@ jobs:
         run: |
           mkdir -p ~/.gorse/dataset
           mkdir -p ~/.gorse/download
-          wget https://cdn.gorse.io/datasets/ml-100k.zip -P ~/.gorse/download
-          wget https://cdn.gorse.io/datasets/ml-1m.zip -P ~/.gorse/download
-          wget https://cdn.gorse.io/datasets/pinterest-20.zip -P ~/.gorse/download
-          wget https://cdn.gorse.io/datasets/frappe.zip -P ~/.gorse/download
-          wget https://cdn.gorse.io/datasets/ml-tag.zip -P ~/.gorse/download
-          wget https://cdn.gorse.io/datasets/criteo.zip -P ~/.gorse/download
-          wget https://cdn.gorse.io/datasets/mnist.zip -P ~/.gorse/download
-          unzip ~/.gorse/download/ml-100k.zip -d ~/.gorse/dataset
-          unzip ~/.gorse/download/ml-1m.zip -d ~/.gorse/dataset
-          unzip ~/.gorse/download/pinterest-20.zip -d ~/.gorse/dataset
-          unzip ~/.gorse/download/frappe.zip -d ~/.gorse/dataset
-          unzip ~/.gorse/download/ml-tag.zip -d ~/.gorse/dataset
-          unzip ~/.gorse/download/criteo.zip -d ~/.gorse/dataset
-          unzip ~/.gorse/download/mnist.zip -d ~/.gorse/dataset
+          wget -nc https://cdn.gorse.io/datasets/ml-100k.zip -P ~/.gorse/download
+          wget -nc https://cdn.gorse.io/datasets/ml-1m.zip -P ~/.gorse/download
+          wget -nc https://cdn.gorse.io/datasets/pinterest-20.zip -P ~/.gorse/download
+          wget -nc https://cdn.gorse.io/datasets/frappe.zip -P ~/.gorse/download
+          wget -nc https://cdn.gorse.io/datasets/ml-tag.zip -P ~/.gorse/download
+          wget -nc https://cdn.gorse.io/datasets/criteo.zip -P ~/.gorse/download
+          wget -nc https://cdn.gorse.io/datasets/mnist.zip -P ~/.gorse/download
+          unzip -n ~/.gorse/download/ml-100k.zip -d ~/.gorse/dataset
+          unzip -n ~/.gorse/download/ml-1m.zip -d ~/.gorse/dataset
+          unzip -n ~/.gorse/download/pinterest-20.zip -d ~/.gorse/dataset
+          unzip -n ~/.gorse/download/frappe.zip -d ~/.gorse/dataset
+          unzip -n ~/.gorse/download/ml-tag.zip -d ~/.gorse/dataset
+          unzip -n ~/.gorse/download/criteo.zip -d ~/.gorse/dataset
+          unzip -n ~/.gorse/download/mnist.zip -d ~/.gorse/dataset
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
