--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build release
         run: >
           gox -output="{{.OS}}/{{.Arch}}/{{.Dir}}" \
-            -osarch='windows/arm64 windows/amd64 linux/arm64 linux/amd64' -ldflags="
+            -osarch='windows/arm64 windows/amd64 linux/arm64 linux/amd64 linux/riscv64' -ldflags="
             -X 'github.com/gorse-io/gorse/cmd/version.Version=$(git describe --tags $(git rev-parse HEAD))'
             -X 'github.com/gorse-io/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)'
             -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)'" ./...
@@ -34,6 +34,7 @@ jobs:
         run: |
           zip -j gorse_linux_amd64.zip linux/amd64/gorse-*
           zip -j gorse_linux_arm64.zip linux/arm64/gorse-*
+          zip -j gorse_linux_riscv64.zip linux/riscv64/gorse-*
           zip -j gorse_windows_amd64.zip windows/amd64/gorse-*
           zip -j gorse_windows_arm64.zip windows/arm64/gorse-*
 
@@ -108,7 +109,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/riscv64
           file: cmd/${{ matrix.image }}/Dockerfile
           push: true
           tags: |
