--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -109,7 +109,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/riscv64
+          platforms: linux/amd64,linux/arm64
           file: cmd/${{ matrix.image }}/Dockerfile
           push: true
           tags: |
