Add health check

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -286,6 +286,11 @@ jobs:
         image: kvrocks/kvrocks:nightly
         ports:
           - 6666
+        options: >-
+          --health-cmd="redis-cli -p 6666 ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
 
     steps:
       - name: Install pre-requisites
