--- a/cmd/gorse-worker/Dockerfile.mkl
+++ b/cmd/gorse-worker/Dockerfile.mkl
@@ -53,4 +53,4 @@ COPY --from=0 /src/cmd/gorse-worker/gorse-worker /usr/bin/gorse-worker
 
 ENV USER root
 
-ENTRYPOINT ["/usr/bin/gorse-worker", "-c", "/etc/gorse/config.toml"]
+ENTRYPOINT ["/usr/bin/gorse-worker"]
