--- a/cmd/gorse-master/Dockerfile.mkl
+++ b/cmd/gorse-master/Dockerfile.mkl
@@ -47,7 +47,7 @@ RUN /src/cmd/gorse-master/gorse-master --version
 ############################
 # STEP 2 build runtime image
 ############################
-FROM alpine
+FROM debian:bookworm-slim
 
 COPY --from=0 /src/cmd/gorse-master/gorse-master /usr/bin/gorse-master
 
