--- a/cmd/gorse-server/Dockerfile.mkl
+++ b/cmd/gorse-server/Dockerfile.mkl
@@ -47,7 +47,7 @@ RUN /src/cmd/gorse-server/gorse-server --version
 ############################
 # STEP 2 build runtime image
 ############################
-FROM alpine
+FROM debian:bookworm-slim
 
 COPY --from=0 /src/cmd/gorse-server/gorse-server /usr/bin/gorse-server
 
