--- a/cmd/gorse-worker/Dockerfile.mkl
+++ b/cmd/gorse-worker/Dockerfile.mkl
@@ -47,7 +47,7 @@ RUN /src/cmd/gorse-worker/gorse-worker --version
 ############################
 # STEP 2 build runtime image
 ############################
-FROM alpine
+FROM debian:bookworm-slim
 
 COPY --from=0 /src/cmd/gorse-worker/gorse-worker /usr/bin/gorse-worker
 
