--- a/cmd/gorse-server/Dockerfile.mkl
+++ b/cmd/gorse-server/Dockerfile.mkl
@@ -22,11 +22,9 @@ COPY --from=golang:1.25 /usr/local/go/ /usr/local/go/
 
 ENV PATH /usr/local/go/bin:$PATH
 
-RUN go version
+# Build Gorse
 
 WORKDIR /src
-
-# Build Gorse
 
 COPY go.* ./
 
@@ -42,14 +40,14 @@ RUN --mount=type=cache,target=/root/.cache/go-build \
        -X 'github.com/gorse-io/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)' \
        -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)'" .
 
-RUN /src/cmd/gorse-server/gorse-server --version
-
 ############################
 # STEP 2 build runtime image
 ############################
 FROM debian:bookworm-slim
 
 COPY --from=0 /src/cmd/gorse-server/gorse-server /usr/bin/gorse-server
+
+RUN /usr/bin/gorse-server --version
 
 ENV USER root
 
