--- a/cmd/gorse-worker/Dockerfile.cuda
+++ b/cmd/gorse-worker/Dockerfile.cuda
@@ -28,8 +28,6 @@ RUN --mount=type=cache,target=/root/.cache/go-build \
        -X 'github.com/gorse-io/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)' \
        -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)'" .
 
-RUN /src/cmd/gorse-worker/gorse-worker --version
-
 ############################
 # STEP 2 build runtime image
 ############################
@@ -38,6 +36,8 @@ FROM nvidia/cuda:12.8.1-runtime-ubuntu24.04
 COPY --from=0 /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 COPY --from=0 /src/cmd/gorse-worker/gorse-worker /usr/bin/gorse-worker
+
+RUN /usr/bin/gorse-worker --version
 
 ENV USER root
 
