--- a/cmd/gorse-server/Dockerfile
+++ b/cmd/gorse-server/Dockerfile
@@ -24,8 +24,6 @@ RUN --mount=type=cache,target=/root/.cache/go-build \
     -X 'github.com/gorse-io/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)' \
     -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)'" .
 
-RUN /src/cmd/gorse-server/gorse-server --version
-
 ############################
 # STEP 2 build a small image
 ############################
@@ -34,6 +32,8 @@ FROM scratch
 COPY --from=0 /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 COPY --from=0 /src/cmd/gorse-server/gorse-server /usr/bin/gorse-server
+
+RUN /usr/bin/gorse-server --version
 
 ENV USER root
 
