remove Free Disk Space

--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   windows_images:
-    name: windows images
+    name: docker images (windows)
     runs-on: windows-latest
     strategy:
       matrix:
@@ -35,23 +35,6 @@ jobs:
       matrix:
         targets: [default, cuda, mkl]
     steps:
-      # - name: Free Disk Space (Ubuntu)
-      #   if: matrix.targets == 'cuda'
-      #   uses: jlumbroso/free-disk-space@main
-      #   with:
-      #     # this might remove tools that are actually needed,
-      #     # if set to "true" but frees about 6 GB
-      #     tool-cache: false
-          
-      #     # all of these default to true, but feel free to set to
-      #     # "false" if necessary for your workflow
-      #     android: true
-      #     dotnet: true
-      #     haskell: true
-      #     large-packages: false
-      #     docker-images: false
-      #     swap-storage: false
-
       - name: Pull source
         uses: actions/checkout@v1
 
