--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -53,3 +53,6 @@ jobs:
           files: docker-bake.hcl
           targets: ${{ matrix.targets }}
           push: true
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
