--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        targets: [default, mkl]
+        targets: [default, cuda, mkl]
     steps:
       - name: Pull source
         uses: actions/checkout@v1
