--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -38,8 +38,15 @@ jobs:
       - name: Pull source
         uses: actions/checkout@v1
 
-      - name: Set up Docker Buildx
+      - if: matrix.targets != 'cuda'
+        name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - if: matrix.targets == 'cuda'
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          config: .github/buildkitd.toml
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
