--- a/cmd/gorse-server/Dockerfile
+++ b/cmd/gorse-server/Dockerfile
@@ -1,4 +1,4 @@
-# syntax = docker/dockerfile:1-experimental
+# syntax = docker/dockerfile:1
 
 ############################
 # STEP 1 build executable binary
