--- a/cmd/gorse-server/Dockerfile.cuda
+++ b/cmd/gorse-server/Dockerfile.cuda
@@ -1,4 +1,4 @@
-# syntax = docker/dockerfile:1-experimental
+# syntax = docker/dockerfile:1
 
 ############################
 # STEP 1 build executable binary
