--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -14,7 +14,7 @@ jobs:
         image: [gorse-master, gorse-server, gorse-worker, gorse-in-one]
     steps:
       - name: Pull source
-        uses: actions/checkout@v1
+        uses: actions/checkout@v5
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -36,14 +36,14 @@ jobs:
         targets: [default, cuda, mkl]
     steps:
       - name: Pull source
-        uses: actions/checkout@v1
+        uses: actions/checkout@v5
 
       - if: matrix.targets != 'cuda'
-        name: Set up Docker Buildx
+        name: Set up Docker Buildx (max-parallelism=4)
         uses: docker/setup-buildx-action@v3
 
       - if: matrix.targets == 'cuda'
-        name: Set up Docker Buildx
+        name: Set up Docker Buildx (max-parallelism=2)
         uses: docker/setup-buildx-action@v3
         with:
           config: .github/buildkitd.toml
