set max-parallelism=1

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -5,50 +5,8 @@ on:
     types: [published]
 
 jobs:
-  build-binaries:
-    name: build binaries
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v5
-        with:
-          go-version-file: ./go.mod
-
-      - name: Install gox
-        run: go install github.com/mitchellh/gox@master
-
-      - name: Build release
-        run: >
-          gox -output="{{.OS}}/{{.Arch}}/{{.Dir}}" \
-            -osarch='windows/arm64 windows/amd64 linux/arm64 linux/amd64 linux/riscv64' -ldflags="
-            -X 'github.com/gorse-io/gorse/cmd/version.Version=$(git describe --tags $(git rev-parse HEAD))'
-            -X 'github.com/gorse-io/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)'
-            -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)'" ./...
-        env:
-          CGO_ENABLED: 0
-
-      - name: Install zip
-        uses: montudor/action-zip@v0.1.1
-
-      - name: Zip binaries
-        run: |
-          zip -j gorse_linux_amd64.zip linux/amd64/gorse-*
-          zip -j gorse_linux_arm64.zip linux/arm64/gorse-*
-          zip -j gorse_linux_riscv64.zip linux/riscv64/gorse-*
-          zip -j gorse_windows_amd64.zip windows/amd64/gorse-*
-          zip -j gorse_windows_arm64.zip windows/arm64/gorse-*
-
-      - name: Upload release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: gorse_*_*.zip
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
-
-  build-macos-binaries:
-    name: build macos binaries
+  binaries:
+    name: binaries
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
@@ -59,7 +17,17 @@ jobs:
       - name: Install gox
         run: go install github.com/mitchellh/gox@master
 
-      - name: Build release
+      - name: Build release (windows and linux)
+        run: >
+          gox -output="{{.OS}}/{{.Arch}}/{{.Dir}}" \
+            -osarch='windows/arm64 windows/amd64 linux/arm64 linux/amd64 linux/riscv64' -ldflags="
+            -X 'github.com/gorse-io/gorse/cmd/version.Version=$(git describe --tags $(git rev-parse HEAD))'
+            -X 'github.com/gorse-io/gorse/cmd/version.GitCommit=$(git rev-parse HEAD)'
+            -X 'github.com/gorse-io/gorse/cmd/version.BuildTime=$(date)'" ./...
+        env:
+          CGO_ENABLED: 0
+
+      - name: Build release (darwin)
         run: >
           gox -output="{{.OS}}/{{.Arch}}/{{.Dir}}" \
             -osarch='darwin/arm64' -ldflags="
@@ -71,7 +39,13 @@ jobs:
         run: brew install zip
 
       - name: Zip binaries
-        run: zip -j gorse_darwin_arm64.zip darwin/arm64/gorse-*
+        run: |
+          zip -j gorse_linux_amd64.zip linux/amd64/gorse-*
+          zip -j gorse_linux_arm64.zip linux/arm64/gorse-*
+          zip -j gorse_linux_riscv64.zip linux/riscv64/gorse-*
+          zip -j gorse_windows_amd64.zip windows/amd64/gorse-*
+          zip -j gorse_windows_arm64.zip windows/arm64/gorse-*
+          zip -j gorse_darwin_arm64.zip darwin/arm64/gorse-*
 
       - name: Upload release
         uses: svenstaro/upload-release-action@v2
@@ -82,8 +56,8 @@ jobs:
           overwrite: true
           file_glob: true
 
-  build-docker-images:
-    name: build docker images
+  docker_images:
+    name: docker images
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -128,8 +102,8 @@ jobs:
           tags: |
             zhenghaoz/${{ matrix.image }}:${{ steps.get_version.outputs.version-without-v }}
 
-  build-windows-images:
-    name: build windows images
+  windows_images:
+    name: windows images
     runs-on: windows-latest
     strategy:
       matrix:
