--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -14,7 +14,7 @@ jobs:
         image: [gorse-master, gorse-server, gorse-worker, gorse-in-one]
     steps:
       - name: Pull source
-        uses: actions/checkout@v1
+        uses: actions/checkout@v5
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -36,10 +36,17 @@ jobs:
         targets: [default, cuda, mkl]
     steps:
       - name: Pull source
-        uses: actions/checkout@v1
+        uses: actions/checkout@v5
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - if: matrix.targets != 'cuda'
+        name: Set up Docker Buildx (max-parallelism=4)
+        uses: docker/setup-buildx-action@v3
+
+      - if: matrix.targets == 'cuda'
+        name: Set up Docker Buildx (max-parallelism=1)
+        uses: docker/setup-buildx-action@v3
+        with:
+          config: .github/buildkitd.toml
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -48,8 +55,11 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build docker image
-        uses: docker/bake-action@v2
+        uses: docker/bake-action@v6
         with:
           files: docker-bake.hcl
           targets: ${{ matrix.targets }}
           push: true
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
