--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -67,7 +67,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -79,7 +79,7 @@ jobs:
         name: Build Docker image
         uses: docker/bake-action@v6
         with:
-          files: docker-bake.hcl
+          source: .
           targets: default
         env:
           VERSIONS: latest,${{ steps.get_version.outputs.major }}.${{ steps.get_version.outputs.minor }},${{ steps.get_version.outputs.version-without-v }}
@@ -88,7 +88,7 @@ jobs:
         name: Build prerelease Docker image
         uses: docker/bake-action@v6
         with:
-          files: docker-bake.hcl
+          source: .
           targets: default
           push: true
         env:
